--- a/style.css
+++ b/style.css
@@ -4,13 +4,34 @@ body {
 }
 
 .swim-lanes {
-  min-height: 60vh;
+  min-height: 40vh;
+  
 }
 
 .task-card {
   margin: 0 auto;
+  background-color: orange;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .task-card:hover {
   cursor: grab;
 }
+
+.lane{
+  height: 100%;
+}
+
+.card-header {
+  background-color: aquamarine;
+  border-bottom: 5px solid blue;
+  border-radius: 40px;
+}
+
+.card {
+  border-radius: 10px;
+}
+
+
